Scroll snapping to elements is broken for main frame scrolling https://bugs.webkit.org/show_bug.cgi?id=146957

Patch by Wenson Hsieh <wenson_hsieh@apple.com> on 2015-07-15
Reviewed by Brent Fulgham.

Source/WebCore:

Fixes the case of elements with scroll snap coordinates in a scroll snapping mainframe by changing
RenderBox::findEnclosingScrollableContainer to return the body's RenderBox when all enclosing elements
are not overflow scrollable but the mainframe can scroll.

Test: css3/scroll-snap/scroll-snap-coordinate-mainframe.html

* page/FrameView.h: Export isScrollable so that the Internals API can use it.
* rendering/RenderBox.cpp: Include MainFrame.h.
(WebCore::RenderBox::findEnclosingScrollableContainer): Changed to return the body's RenderBox if
    none of its parent elements are overflow scrolling.
* testing/Internals.cpp:
(WebCore::Internals::scrollSnapOffsets): Updated to return snap offsets for the body element,
    allowing us to call window.internals.scrollSnapOffsets(document.body).

LayoutTests:

Tests that basic scroll snap coordinates in the mainframe works.

* css3/scroll-snap/scroll-snap-coordinate-mainframe-expected.txt: Added.
* css3/scroll-snap/scroll-snap-coordinate-mainframe.html: Added.

Canonical link: https://commits.webkit.org/165038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186865 268f45cc-cd09-0410-ab3c-d52691b4dbfc